--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
-    <p>It was a dark and stormy night...</p>
+    <p>It was a dark and stormy night...
+      Bethany was in class messing up the code.
+    </p>
   </body>
 </html>
