added third line of story

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <p>It was a dark and stormy night...
       Bethany was in class messing up the code.
+      And Jordan didn't know what the hell she was doing.
     </p>
   </body>
 </html>
