added second line of story

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <p>It was a dark and stormy night...
       Bethany was in class messing up the code.
       And Jordan didn't know what the hell she was doing.
+      This is the last edit I'm making.
     </p>
   </body>
 </html>
