added yet another line to the story

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       Bethany was in class messing up the code.
       And Jordan didn't know what the hell she was doing.
       This is the last edit I'm making.
+      And I suppose I should make one last edit as well. That's what a good partner would do, afterall.
     </p>
   </body>
 </html>
